[package]
name = "ephyr-log"
version = "0.1.0"
edition = "2018"
authors = ["ALLATRA IT <it@allatra.org>"]
publish = false

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-log = "0.1"
tracing-futures = "0.2.5"
tracing-actix-web = { version= "0.7.2", features = ["tracing-opentelemetry_0_18_pkg"] }
